fixed the spacing of notices and size of the earnings.svg

--- a/src/style.css
+++ b/src/style.css
@@ -178,6 +178,7 @@ button:hover {
   justify-content: center;
   align-items: center;
   gap: 1rem;
+  margin-bottom: 1rem;
 }
 .notices-container .card {
   background-color: var(--clr-columbia-blue);
